--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Typographic from "../components/Typographic.astro";
 const allPosts = await Astro.glob('../pages/posts/*.md');
+
 ---
 
 <Layout title="Sobre mi || JotaDev">
