--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -3,21 +3,21 @@ import bento from "../data/bento.json";
 
 export type Props = {
   grid: string;
-  icon: SVGSVGElement;
+  Icon: SVGSVGElement | any;
   title: string;
   subtitle: string;
   color: string;
   position: string;
 };
 
-const { grid, icon, title, subtitle, color, position } = Astro.props;
+const { grid, Icon, title, subtitle, color, position } = Astro.props;
 ---
 
 <div
   class={`${grid} relative w-full h-full dark:bg-white/5 bg-gray-100/90 backdrop-blur-xl overflow-hidden rounded-md cursor-pointer hover:-translate-y-1 dark:hover:bg-white/10 transition-transform duration-200 border-b-[0.1rem] dark:border-white/5 border-black/5 p-4`}
 >
   <div class="h-full w-full flex flex-col justify-center items-center">
-    <div>{icon}</div>
+    <div><Icon class="size-12"/></div>
     <h1 class="font-bold tracking-tighter dark:text-white text-black">
       {title}
     </h1>
