--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,48 +1,7 @@
 ---
-export type Props = {
-  classLogo: string
-}
-const { classLogo } = Astro.props;
+
+const props = Astro.props
+
 ---
 
-<svg
-  xmlns="http://www.w3.org/2000/svg"
-  data-name="Layer 3"
-  viewBox="0 0 54 55.84"
-  class={classLogo}
-  id="logoJotadev"
->
-  <defs>
-    <linearGradient
-      id="a"
-      x1="27"
-      x2="27"
-      y1="55.84"
-      gradientUnits="userSpaceOnUse"
-    >
-      <stop offset="0" stop-color="#573E78"></stop>
-      <stop offset="1" stop-color="#1E3466"></stop>
-    </linearGradient>
-  </defs>
-  <path
-    fill="url(#a)"
-    d="M45.67 0H7.58C1.16 0 0 7.42 0 7.42v40.75c0 2.58 1.33 7.67 6.75 7.67h9.5l5.42-4.92a11.76 11.76 0 0 0 5.33.5c5-.69 11.65-3.87 11.88-13.17.35-14.75.21-29.42.21-29.42l6.08-.08s-.08 21 0 30.92-11.34 16.16-11.34 16.16h12.34A8.92 8.92 0 0 0 54 47.08V7.33C54 5 51.92 0 45.67 0Zm-29 8.82c4-.14 13.72 0 13.72 0V37c0 .2-.6 5.9-5.31 5.88a6.55 6.55 0 0 1-6.75-5.71 11.58 11.58 0 0 1 .06-3.86L8.25 39.29V17.2a9 9 0 0 1 8.46-8.38Z"
-  ></path>
-</svg>
-
-<script>
-  const $logo:SVGAElement = document.querySelector("#logoJotadev")
-  const logoTheme = {
-    light: ['573E78','1E3466'],
-    dark: ['EEC9F2','dcf1fa']
-  }
-  const handleToggleTheme = () => {
-    const theme:string = document.documentElement.classList[0] ?? 'light';
-    $logo.querySelectorAll("stop").forEach((stop, i) => {
-    stop.setAttribute("stop-color",`#${logoTheme[theme][i]}`)
-  })
-  }
-  handleToggleTheme()
-  document.getElementById("themeToggle").addEventListener("click", handleToggleTheme);
-
-</script>
+<svg viewBox="0 0 24 24" class={props.class} fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M14.1213 9.87865C18.4171 14.1744 20.9497 18.6066 19.7782 19.7782C19.3031 20.2532 18.2918 20.1192 16.971 19.5055C13.746 21.6451 9.44716 21.4873 6.38175 19.032L6.34315 19.071L4.92893 17.6568L4.96734 17.6174C2.51262 14.5521 2.35503 10.2537 4.49456 7.03005C3.88075 5.70797 3.74678 4.69685 4.22183 4.2218C5.34959 3.09404 9.49865 5.39866 13.639 9.40425L14.1213 9.87865ZM12.7071 11.2929C10.823 9.40876 8.86963 7.84195 7.23581 6.86954L7.05025 7.05023C4.55691 9.54357 4.33771 13.4499 6.39266 16.1917L8.23943 14.3462C8.06128 13.679 8.23392 12.9376 8.75736 12.4142C9.53841 11.6331 10.8047 11.6331 11.5858 12.4142C12.3668 13.1952 12.3668 14.4616 11.5858 15.2426C11.0626 15.7658 10.3218 15.9385 9.65487 15.7608L7.80749 17.6067C10.5493 19.6623 14.4562 19.4433 16.9497 16.9497L17.1286 16.7623L17.076 16.6734C16.1001 15.0582 14.5564 13.1422 12.7071 11.2929ZM19.7782 4.2218C20.5592 5.00285 20.5592 6.26918 19.7782 7.05023C19.7254 7.10299 19.6704 7.1522 19.6135 7.19783C21.2057 9.71504 21.4267 12.8522 20.276 15.5426C19.8994 14.8064 19.4347 14.0317 18.8899 13.2368C19.2795 11.0596 18.6326 8.73308 16.9497 7.05023C15.2669 5.36737 12.9404 4.72049 10.7627 5.10957C9.96765 4.56488 9.19311 4.10029 8.45731 3.72447C11.1478 2.57335 14.2849 2.79427 16.8039 4.38695C16.8478 4.32955 16.897 4.27457 16.9497 4.2218C17.7308 3.44075 18.9971 3.44075 19.7782 4.2218Z"/></svg>
