--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,6 @@
 ---
-import { ViewTransitions } from "astro:transitions";
-import NavBar from "../components/NavBar.astro";
+// import NavBar from "../components/NavBar.astro";
 import "@fontsource-variable/onest";
-import Background from "../components/Background.astro";
 
 interface Props {
   title: string;
@@ -12,7 +10,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -22,27 +20,14 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body
-    class="font-onest root relative w-full min-h-screen text-white dark:bg-slate-800 bg-slate-50 transition-all pt-24"
+    class="font-onest root relative w-full min-h-screen transition-all"
   >
-    <NavBar />
     <section class="w-full h-full flex flex-col z-10 relative">
       <slot />
     </section>
-    <Background />
   </body>
 </html>
 <style is:global>
-  :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
-    --accent-dark: 49, 10, 101;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
-      white 60%
-    );
-  }
   html {
     font-family: system-ui, sans-serif;
     background: #fcf8f7;
@@ -51,33 +36,5 @@ const { title } = Astro.props;
   }
   .main {
     @apply flex h-full mx-auto;
-  }
-  body::-webkit-scrollbar {
-    width: 14px;
-    display: block;
-    background: linear-gradient(
-      rgb(241 245 249 / 0.8) calc(3.5rem - 2px),
-      rgb(255 255 255 / 0.2) calc(3.5rem - 2px),
-      rgb(255 255 255 / 0.2) calc(3.6rem - 2px),
-      rgb(248 250 252 / 1) calc(3.6rem - 2px)
-    );
-  }
-  body::-webkit-scrollbar-thumb {
-    border: 5px solid transparent;
-    display: block;
-    background: #787878;
-    border-radius: 10px;
-    background-clip: padding-box;
-  }
-  html.dark body {
-    background-color: rgb(30 41 59 / 1);
-  }
-  html.dark body::-webkit-scrollbar {
-    background: linear-gradient(
-      rgb(17 24 39 / .96) calc(3.5rem - 2px),
-      rgb(40 48 65 /1) calc(3.5rem - 2px),
-      rgb(40 48 65 /1) calc(3.6rem - 2px),
-      rgb(30 41 59 /1) calc(3.6rem - 2px)
-    );
   }
 </style>
