--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,27 +1,41 @@
 ---
 // import NavBar from "../components/NavBar.astro";
 import "@fontsource-variable/onest";
+import { getLangFromUrl } from "../i18n/utils";
 
 interface Props {
   title: string;
+  description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="es">
+<html lang={getLangFromUrl(Astro.url)}>
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
+    <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <meta name="description" content={description} />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:image" content="https://belljs.vercel.app/og-1.png" />
+    <meta property="og:url" content="https://belljs.vercel.app" />
+    <meta property="og:type" content="website" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:site" content="https://belljs.vercel.app/og-1.png" />
+    <meta property="twitter:title" content={title} />
+    <meta property="twitter:description" content={description} />
+    <meta property="twitter:creator" content="JotaDev" />
+    <meta property="twitter:image:src" content="https://belljs.vercel.app/og-1.png" />
+
   </head>
-  <body
-    class="font-onest root relative w-full min-h-screen transition-all"
-  >
+  <body class="font-onest root relative w-full min-h-screen transition-all">
     <section class="w-full h-full flex flex-col z-10 relative">
       <slot />
     </section>
