--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,1 +1,2 @@
+<meta name="google-site-verification" content="7tF8GI33haig9fReSrmikEKHu4_ZuJYpQs0C2BU4m54" />
 <meta http-equiv="refresh" content="0;url=/en">
