SEO and Updated Web

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,8 @@ const { title, description } = Astro.props;
 <html lang={getLangFromUrl(Astro.url)}>
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="7tF8GI33haig9fReSrmikEKHu4_ZuJYpQs0C2BU4m54" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
