--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -58,8 +58,8 @@ import Logo from "../../components/Logo.astro"
 </Layout>
 
 <script>
-  import Bell from "../../lib/bell.js"
-  import "../../lib/bell.css"
+  import Bell from "@jotadev0/belljs"
+  import "@jotadev0/belljs/bell.css"
   const type = ["info", "warning", "error", "check", "loading"];
   const title = ["Soon a stable version","Upps, ocurred an error", "Loading resources", "Everything's fine", "Loading users"];
   const description = [
