--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -47,9 +47,9 @@ import Logo from "../../components/Logo.astro"
           <img src="img.png" alt="Imagen de datos de bell" class="absolute top-1/2 left-1/2 -translate-x-1/2 w-60" loading="lazy"/>
         </div>
         <div class="bg-stone-300/40 rounded-xl flex items-center flex-col md:col-span-1 col-span-3 justify-start p-8 m-3">
-          <h2 class="text-3xl font-bold text-black mb-3">Pronto...</h2>
+          <h2 class="text-3xl font-bold text-black mb-3">Estable...</h2>
           <p class="font-medium text-base text-stone-700 text-center w-3/4">
-            El <span class="bg-black/80 text-white/90 px-1 rounded">paquete</span> de NPM esta en desarrollo y esta por llegar.
+            El <span class="bg-black/80 text-white/90 px-1 rounded">paquete</span> de NPM ya esta aqui.
           </p>
         </div>
       </section>
