--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,10 +93,10 @@ import Logo from "../components/Logo.astro";
       <div
         class="bg-stone-300/40 rounded-xl flex items-center flex-col md:col-span-1 col-span-3 justify-start p-8 m-3"
       >
-        <h2 class="text-3xl font-bold text-black mb-3">Soon...</h2>
+        <h2 class="text-3xl font-bold text-black mb-3">Stable!!.</h2>
         <p class="font-medium text-base text-stone-700 text-center w-3/4">
-          NPM <span class="bg-black/80 text-white/90 px-1 rounded">package</span
-          > is close to arriving.
+        The NPM <span class="bg-black/80 text-white/90 px-1 rounded">package</span
+          > is here.
         </p>
       </div>
     </section>
@@ -104,7 +104,7 @@ import Logo from "../components/Logo.astro";
       <Doc />
     </article>
   </div>
-  <p class="mx-auto text-gray-800 my-4">I've with ❤‍🔥 for JotaDev</p>
+  <p class="mx-auto text-gray-800 my-4">I've with ❤‍🔥 by JotaDev</p>
 </Layout>
 
 <script>
