--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,6 +37,15 @@ const { title, description } = Astro.props;
     <meta property="twitter:image:src" content="https://belljs.vercel.app/og-1.png" />
 
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0W3TXSSDG9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0W3TXSSDG9');
+</script>
   <body class="font-onest root relative w-full min-h-screen transition-all">
     <section class="w-full h-full flex flex-col z-10 relative">
       <slot />
