Update playground es

--- a/src/pages/es/playground/index.astro
+++ b/src/pages/es/playground/index.astro
@@ -106,6 +106,7 @@ import Layout from "../../../layouts/Layout.astro";
             <input
               type="number"
               placeholder="3000"
+              value="50000"
               id="timeScreen"
               class="px-3 py-2 text-gray-400 rounded-sm w-full border-b-2 focus:border-red-500 outline-none focus:text-red-500 focus:placeholder:text-red-500/30 transition"
             />
@@ -116,8 +117,8 @@ import Layout from "../../../layouts/Layout.astro";
               class="w-full text-gray-400 py-2 border-b-2 rounded-sm px-3 bg-white outline-none focus:text-red-500 focus:border-red-500"
               id="expand"
             >
-              <option value="1">Si</option>
                <option value="0">No</option>
+              <option value="1">Si</option>
             </select>
           </label>
         </div>
